--- a/VivonsExpos/app/src/main/res/layout/activity_main.xml
+++ b/VivonsExpos/app/src/main/res/layout/activity_main.xml
@@ -61,5 +61,17 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonCatalogue"
         tools:ignore="MissingConstraints" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="211dp"
+        tools:layout_editor_absoluteY="178dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
