--- a/VivonsExpos/app/src/main/res/layout/page_connex.xml
+++ b/VivonsExpos/app/src/main/res/layout/page_connex.xml
@@ -85,7 +85,6 @@
         android:layout_marginRight="50dp"
         android:paddingHorizontal="40dp"
         android:text="Se connecter"
-        android:textColor="color/Se connecter"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,13 +113,14 @@
         android:layout_height="73dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:paddingHorizontal="40dp"
         android:text="S'inscrire"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/simpleTextView3" />
 
