--- a/VivonsExpos/app/src/main/res/layout/page_connex.xml
+++ b/VivonsExpos/app/src/main/res/layout/page_connex.xml
@@ -74,39 +74,19 @@
         app:layout_constraintVertical_bias="0.083"
         tools:ignore="MissingConstraints" />
 
-    <Button
-        android:id="@+id/buttonconnex"
-        android:layout_width="317dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:paddingHorizontal="40dp"
-        android:text="Se connecter"
-        android:textColor="color/Se connecter"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextMdp"
-        app:layout_constraintVertical_bias="0.0" />
-
     <TextView
         android:id="@+id/simpleTextView3"
         android:layout_width="385dp"
         android:layout_height="19dp"
         android:layout_marginStart="13dp"
         android:layout_marginLeft="13dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="13dp"
         android:layout_marginRight="13dp"
         android:text="-------------------------------------------------ou-----------------------------------------------------------------"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonconnex"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="488dp" />
 
     <Button
         android:id="@+id/buttoninscription"
@@ -136,6 +116,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttoninscription"
         app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="307dp"
+        android:layout_height="69dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="35dp"
+        android:text="Se Connecter"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/simpleTextView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TextMdp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
