--- a/VivonsExpos/app/src/main/res/layout/activity_consultation_stand.xml
+++ b/VivonsExpos/app/src/main/res/layout/activity_consultation_stand.xml
@@ -19,6 +19,20 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
+    <TextView
+        android:id="@+id/textIdentification"
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center_vertical"
+        android:text="Nom prenom"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
+
     <Button
         android:id="@+id/buttonMesStands"
         android:layout_width="313dp"
@@ -34,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        app:layout_constraintTop_toBottomOf="@+id/textIdentification" />
 
     <Button
         android:id="@+id/buttonDemandeMotdif"
