--- a/VivonsExpos/app/src/main/res/layout/activity_main.xml
+++ b/VivonsExpos/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/buttonBack"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -16,7 +17,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/buttonConnexion"
+        android:id="@+id/buttonMenuConnexion"
         android:layout_width="206dp"
         android:layout_height="53dp"
         android:layout_marginStart="204dp"
@@ -30,7 +31,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/buttonCatalogue"
+        android:id="@+id/buttonMenuCatalogue"
         android:layout_width="313dp"
         android:layout_height="73dp"
         android:layout_marginStart="55dp"
@@ -43,7 +44,7 @@
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonConnexion" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonMenuConnexion" />
 
     <ImageView
         android:id="@+id/image_de_fond"
@@ -55,10 +56,12 @@
 
         android:layout_marginEnd="45dp"
         android:layout_marginRight="45dp"
+        android:layout_marginBottom="45dp"
         android:src="@drawable/image_de_fond"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCatalogue"
+        app:layout_constraintTop_toBottomOf="@+id/buttonMenuCatalogue"
         tools:ignore="MissingConstraints" />
 
 
