--- a/VivonsExpos/app/src/main/res/layout/gestion_secteur.xml
+++ b/VivonsExpos/app/src/main/res/layout/gestion_secteur.xml
@@ -92,14 +92,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
-            android:text="@string/pirates" />
+            android:text="" />
 
         <RadioButton
             android:id="@+id/radio_ninjas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
-            android:text="@string/ninjas" />
+            android:text="" />
     </RadioGroup>
 
     <Button
