--- a/VivonsExpos/app/src/main/res/layout/menu_staff.xml
+++ b/VivonsExpos/app/src/main/res/layout/menu_staff.xml
@@ -1,6 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="123dp"
+        android:layout_height="118dp"
+        android:src="@drawable/logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btnAffectationStand"
+        android:layout_width="255dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginLeft="76dp"
+
+        android:layout_marginBottom="460dp"
+        android:text="Affectation des stands"
+
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnModificationStand"
+        android:layout_width="255dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginLeft="76dp"
+
+        android:layout_marginBottom="368dp"
+        android:text="Modification des stands"
+
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAffectationStand"/>
+
+    <Button
+        android:id="@+id/btnGestionSecteur"
+        android:layout_width="255dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginLeft="76dp"
+
+        android:layout_marginBottom="172dp"
+        android:text="Gestion des secteurs"
+
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnValidationInscription"
+        app:layout_constraintVertical_bias="0.263" />
+
+    <Button
+        android:id="@+id/btnValidationInscription"
+        android:layout_width="255dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginLeft="76dp"
+
+        android:layout_marginBottom="268dp"
+        android:text="validations des inscriptions"
+
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnModificationStand"
+        app:layout_constraintVertical_bias="0.411" />
+
+    <Button
+        android:id="@+id/buttonback"
+        android:layout_width="158dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="72dp"
+        android:paddingHorizontal="40dp"
+        android:text="retour"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttoninscription"
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="ExtraText" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
