--- a/VivonsExpos/app/src/main/res/layout/activity_visiteur.xml
+++ b/VivonsExpos/app/src/main/res/layout/activity_visiteur.xml
@@ -14,16 +14,20 @@
         android:src="@drawable/logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <TextView
+
+    <EditText
         android:id="@+id/textRecherche"
-        android:layout_width="192dp"
-        android:layout_height="31dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="123dp"
-        tools:layout_editor_absoluteY="152dp"
+        android:layout_width="200dp"
+        android:layout_height="35dp"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo2"
         tools:ignore="MissingConstraints" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="200dp"
