--- a/VivonsExpos/app/src/main/res/layout/page_connex.xml
+++ b/VivonsExpos/app/src/main/res/layout/page_connex.xml
@@ -13,7 +13,7 @@
         android:src="@drawable/logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:context=".pageConnex" />
 
 
     <TextView
