--- a/VivonsExpos/app/src/main/res/layout/validation_inscription.xml
+++ b/VivonsExpos/app/src/main/res/layout/validation_inscription.xml
@@ -29,7 +29,8 @@
     <ListView
         android:id="@+id/listCandidat"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@+id/titreAffectStand"/>
 
 
 
